--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 #uncomment these for local testing on mysql server
-spring.datasource.url=jdbc:mysql://localhost:3306/bristle-order
+spring.datasource.url=jdbc:mysql://localhost:3306/bristle_order
 spring.datasource.username=root
 spring.datasource.password=Andy@39909204
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
