--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port = 8086
+grpc.server.port=9096
 
 #spring.datasource.url=jdbc:mariadb://192.168.88.6:3307/AndyTest
 #spring.datasource.username=root
@@ -12,7 +13,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 #sql log format
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
 
 #uncomment these for local testing on mysql server
 spring.datasource.url=jdbc:mysql://localhost:3306/bristle_order
