--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>grpc-server-spring-boot-starter</artifactId>
 			<version>2.7.0.RELEASE</version>
 		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.hibernate.orm</groupId>-->
+<!--			<artifactId>hibernate-jpamodelgen</artifactId>-->
+<!--			<version>6.1.0.Final</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
