--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/bristle_order
 spring.datasource.username=root
 spring.datasource.password=Andy@39909204
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+## db migration
+# this one make sure after hibernate auto schema creation, schema.sql and data.sql is checked and run
+spring.jpa.defer-datasource-initialization=true
+# Loading initial data with data.sql only works for embedded databases
+# this one activates it for other dbs
+spring.sql.init.mode=always
