--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
 server.port = 8086
 grpc.server.port=9096
 
-#spring.datasource.url=jdbc:mariadb://192.168.88.6:3307/AndyTest
-#spring.datasource.username=root
-#spring.datasource.password=Andy@39909204
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
-
 #drop the table everything app is started
 spring.jpa.hibernate.ddl-auto=create-drop
 
@@ -15,10 +9,17 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #uncomment these for local testing on mysql server
-spring.datasource.url=jdbc:mysql://localhost:3306/bristle_order
-spring.datasource.username=root
-spring.datasource.password=Andy@39909204
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/bristle_order
+#spring.datasource.username=root
+#spring.datasource.password=Andy@39909204
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Uncomment these for deployment
+spring.datasource.url=jdbc:mariadb://${HOST}:3307/bristle_order
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
 
 ## db migration
 # this one make sure after hibernate auto schema creation, schema.sql and data.sql is checked and run
